--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ gql = { extras = ["aiohttp"], version = "^3.4.0" }
 requests = "^2.28.2"
 web3 = "^6.2.0"
 multiproof = {git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.2"}
+dataclass-wizard = "^0.22.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
