--- a/client/package.json
+++ b/client/package.json
@@ -26,15 +26,18 @@
     "test": "TZ=UTC jest",
     "type-check": "tsc --noEmit true",
     "synpress:open": "synpress open --configFile synpress.config.ts",
-    "synpress:run": "synpress run --configFile synpress.config.ts"
+    "synpress:run:desktop": "synpress run --configFile synpress.config.ts --config viewportWidth=1920,viewportHeight=1080",
+    "synpress:run:mobile": "synpress run --configFile synpress.config.ts --config viewportWidth=471,viewportHeight=667",
+    "synpress:run:tablet": "synpress run --configFile synpress.config.ts --config viewportWidth=755,viewportHeight=667",
+    "synpress:run": "yarn synpress:run:mobile && yarn synpress:run:tablet && yarn synpress:run:desktop"
   },
   "dependencies": {
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@loadable/component": "^5.15.3",
     "@tanstack/react-query": "^4.29.17",
-    "@web3modal/ethereum": "^2.6.0",
-    "@web3modal/react": "^2.6.0",
+    "@web3modal/ethereum": "2.2.2",
+    "@web3modal/react": "2.2.2",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
@@ -106,7 +109,8 @@
     "vite-plugin-html-config": "^1.0.11"
   },
   "resolutions": {
-    "@synthetixio/synpress/**/eth-sig-util": "yarn:@metamask/eth-sig-util@^5.1.0"
+    "@synthetixio/synpress/**/eth-sig-util": "yarn:@metamask/eth-sig-util@^5.1.0",
+    "**/cypress": "12.14.0"
   },
   "engines": {
     "node": ">= 16.13.0 <17.0.0"
