--- a/ci/Dockerfile.client
+++ b/ci/Dockerfile.client
@@ -4,5 +4,4 @@ COPY package.json yarn.lock ./
 RUN yarn install --ignore-scripts --frozen-lockfile && yarn cache clean
 COPY ./ ./
 
-EXPOSE 4173
-ENTRYPOINT [ "yarn", "start" ]
+ENTRYPOINT ["yarn", "run", "build"]
