CAQD-175 Added secure ingress

--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -16,10 +16,12 @@ spec:
   sources:
   # https://linear.app/golemfoundation/issue/CAQD-142/move-helm-git-repository-to-devops-space
   - repoURL: 'https://git.ring0.cc/mike/helm/raw/branch/master'
-    targetRevision: 0.1.68
+    targetRevision: 0.1.74
     chart: octant
     helm:
       parameters:
+        - name: "secureIngress"
+          value: "$SECURE_INGRESS"
         - name: "image.tag"
           value: "$IMAGE_TAG"
         - name: "contracts.deploy"
