--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ flask-cors = "^4.0.0"
 flask-migrate = "^4.0.4"
 flask-socketio = "^5.3.3"
 flask-restx = "^1.1.0"
+flask-apscheduler = "^1.12.4"
 gql = { extras = ["aiohttp"], version = "^3.4.0" }
 requests = "^2.28.2"
 web3 = "^6.5.0"
