--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^7.3.1"
 pytest-mock = "^3.10.0"
 black = "^23.3.0"
 pytest-cov = "^4.0.0"
+freezegun = "^1.2.2"
 
 [tool.poetry.group.prod]
 optional = true
