--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -16,7 +16,7 @@ spec:
   sources:
   # https://linear.app/golemfoundation/issue/CAQD-142/move-helm-git-repository-to-devops-space
   - repoURL: 'https://git.ring0.cc/mike/helm/raw/branch/master'
-    targetRevision: 0.1.91
+    targetRevision: 0.2.3
     chart: octant
     helm:
       parameters:
@@ -27,24 +27,39 @@ spec:
         - name: "secureIngress"
           value: "$SECURE_INGRESS"
         - name: "contracts.deploy"
-          value: "$DEPLOY_CONTRACTS"
+          value: "false"
         - name: "contracts.epochDuration"
           value: "$EPOCH_DURATION"
         - name: "contracts.decisionWindow"
           value: "$DECISION_WINDOW"
-        # Hardcoded in this file
-        - name: "contracts.addresses.multisigAddress"
-          value: "0xfC9527820A76b515a2c66C22e0575501DEDD8281"
-        - name: "contracts.addresses.allocations"
-          value: "0x0000000000000000000000000000000000000000"
-        - name: "backendServer.schedulerEnabled"
-          value: "True"
-        - name: "backendServer.vaultConfirmWithdrawals"
-          value: "True"
         - name: "backendServer.epoch0End"
           value: "$EPOCH_0_END"
         - name: "backendServer.epoch1End"
           value: "$EPOCH_1_END"
+        # Hardcoded in this file
+        - name: "contracts.addresses.multisigAddress"
+          value: "$MULTISIG_ADDRESS"
+        - name: "backendServer.schedulerEnabled"
+          value: "True"
+        # From Deploy contracts job
+        - name: contracts.addresses.startBlock
+          value: "$BLOCK_NUMBER"
+        - name: contracts.addresses.auth
+          value: "$AUTH_CONTRACT_ADDRESS"
+        - name: contracts.addresses.deposits
+          value: "$DEPOSITS_CONTRACT_ADDRESS"
+        - name: contracts.addresses.epochs
+          value: "$EPOCHS_CONTRACT_ADDRESS"
+        - name: contracts.addresses.proposals
+          value: "$PROPOSALS_CONTRACT_ADDRESS"
+        - name: contracts.addresses.vault
+          value: "$VAULT_CONTRACT_ADDRESS"
+        - name: contracts.addresses.withdrawals_target
+          value: "$WITHDRAWALS_TARGET_CONTRACT_ADDRESS"
+        - name: contracts.addresses.glm
+          value: "$GLM_CONTRACT_ADDRESS"
+        - name: contracts.addresses.gnt
+          value: "$GNT_CONTRACT_ADDRESS"
   syncPolicy:
     automated:
       prune: true
