--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,10 +1,24 @@
-OCTANT_BACKEND_SECRET_KEY=some-random-key
-OCTANT_ENV=development
-SUBGRAPH_ENDPOINT=https://octant.world/subgraphs/name/octant
-DB_URI=
+OCTANT_BACKEND_SECRET_KEY=
+OCTANT_ENV=
 ETH_RPC_PROVIDER_URL=
+SUBGRAPH_ENDPOINT=
+DB_URI=
+EPOCH_0_END=
+EPOCH_1_END=
+
+CHAIN_ID=
+CHAIN_NAME=
+
 GNT_CONTRACT_ADDRESS=
 GLM_CONTRACT_ADDRESS=
 EPOCHS_CONTRACT_ADDRESS=
+AUTH_CONTRACT_ADDRESS=
+DEPOSITS_CONTRACT_ADDRESS=
 PROPOSALS_CONTRACT_ADDRESS=
 WITHDRAWALS_TARGET_CONTRACT_ADDRESS=
+VAULT_CONTRACT_ADDRESS=
+
+SCHEDULER_ENABLED=
+SCHEDULER_API_ENABLED=
+TESTNET_MULTISIG_PRIVATE_KEY=
+VAULT_CONFIRM_WITHDRAWALS_ENABLED=
