chore: default values in subgraph.yaml point to localhost network
reason: it is a bit less misleading

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -4,11 +4,10 @@ schema:
 dataSources:
   - kind: ethereum
     name: Epochs
-    network: sepolia
+    network: localhost
     source:
       abi: Epochs
-      address: "0x86A032e5e5bEaaEB8eb0F625bEB5426D8B526719"
-      startBlock: 3771656
+      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -23,11 +22,10 @@ dataSources:
         - handler: handleBlock
   - kind: ethereum
     name: Deposits
-    network: sepolia
+    network: localhost
     source:
       abi: Deposits
-      address: "0x044465B505aeE0B790b180750E263e3F83a682e8"
-      startBlock: 3771656
+      address: "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -48,11 +46,10 @@ dataSources:
       file: ./src/deposits.ts
   - kind: ethereum
     name: Vault
-    network: sepolia
+    network: localhost
     source:
       abi: Vault
-      address: "0xd3C9777a8cafE46583B5425C10196503c4428ddC"
-      startBlock: 3771656
+      address: "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
